--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test streams</title>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="initVideo.js"></script>
-    <style>
-        .video {
-            width: 300px;
-            height: 200px;
-        }
-    </style>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>SHRI - 2020 - Test streams</title>
+        <link rel="stylesheet" href="main.css" />
+        
+    </head>
+    <body>
+        <!-- <canvas id="canvas" width="1280" height="960"></canvas>
+            <br>
+            <canvas id="tmp-canvas"></canvas>
+        <div id="light-meter"></div> -->
 
-<video id="video-1" class="video" controls muted autoplay></video>
-<video id="video-2" class="video" controls muted autoplay></video>
-<br>
-<video id="video-3" class="video" controls muted autoplay></video>
-<video id="video-4" class="video" controls muted autoplay></video>
-<script>
-    initVideo(
-        document.getElementById('video-1'),
-        'http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fsosed%2Fmaster.m3u8'
-    );
+        <div class="container">
+            <video id="video-1" class="video" muted autoplay playsinline></video>
+            <video id="video-2" class="video" muted autoplay playsinline></video>
+            <video id="video-3" class="video" muted autoplay playsinline></video>
+            <video id="video-4" class="video" muted autoplay playsinline></video>
 
-    initVideo(
-        document.getElementById('video-2'),
-        'http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstairs%2Fmaster.m3u8'
-    );
+            <div class="controls">
+                <div class="controls_videos">
+                    <button class="controls__btn">Все камеры</button>
+                </div>
+                <div class="controls_volume">
+                    <div id="volume-text"></div>
+                    <div id="volume-meter"></div>
+                </div>
+                <div class="controls_lighting">
+                    <label for="brightness-input">Яркость</label>
+                    <input type="range" id="brightness-input" min="0" max="2" step="0.01"/>
+                    <label for="brightness-input" id="brightness-input-value">1</label>
+                    <br />
+                    <label for="contrast-input">Контраст</label>
+                    <input type="range" id="contrast-input" min="0" max="2" step="0.01"/>
+                    <label for="contrast-input" id="contrast-input-value">1</label>
+                </div>
+            </div>
+        </div>
 
-    initVideo(
-        document.getElementById('video-3'),
-        'http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fdog%2Fmaster.m3u8'
-    );
+        <script deffer src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+        <script deffer src="initVideo.js"></script>
+        <!-- <script deffer src="detection.js"></script> -->
+        <script src="analyzer.js"></script>
+        <script src="bright.js"></script>
+        <script src="main.js"></script>
 
-    initVideo(
-        document.getElementById('video-4'),
-        'http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstreet%2Fmaster.m3u8'
-    );
-
-</script>
-
-
-</body>
+    </body>
 </html>
